--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "dscamargo-ds",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.0.5",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "prebuild": "rm -rf dist",
+    "build": "tsup src/index.ts --format esm,cjs --dts",
+    "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
+    "release": "npm publish dist",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "deploy-storybook": "storybook-to-ghpages",
@@ -43,6 +44,7 @@
     "msw": "^0.47.4",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
+    "tsup": "^6.2.3",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   },
