--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,16 @@
-name: Deploy Storybook
+name: Publish npm package
 
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types: [created]
 
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
     steps:
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
       - name: Checkout
         uses: actions/checkout@v3
       
@@ -23,5 +25,17 @@ jobs:
       - name: Build lib
         run: yarn build
 
-      - name: Remove unused files
-        run: find  . -type f ! -name "dist" ! -name "package.json" ! -name "yarn.lock" -print
+      - name: Update package.json version
+        uses: jossef/action-set-json-field@v2
+        with:
+          file: package.json
+          field: version
+          value: $RELEASE_VERSION
+
+      - name: Prepare files
+        run: cp yarn.lock dist && cp package.json dist
+      
+      - name: Publish package on NPM 📦
+        run: npm publish dist
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
