--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,7 +2,10 @@ name: Deploy Storybook
 
 on:
   release:
-    types: [created]
+    types:
+    - created
+    - published
+    - released
 
 jobs:
   build-and-deploy:
