--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,10 @@
 name: Publish npm package
 
 on:
-  release:
-    types:
-    - created
-
+  push:
+    branches:
+      - 'master'
+      
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
@@ -22,7 +22,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Build lib
         run: yarn build
@@ -36,8 +36,11 @@ jobs:
 
       - name: Prepare files
         run: cp yarn.lock dist && cp package.json dist
-      
-      - name: Publish package on NPM 📦
-        run: npm publish dist
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: List files
+        run: ls -la``
+
+      # - name: Publish package on NPM 📦
+      #   run: npm publish dist
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
