--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - 'master'
-      
+
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
@@ -38,7 +38,7 @@ jobs:
         run: cp yarn.lock dist && cp package.json dist
 
       - name: List files
-        run: ls -la``
+        run: ls -la dist
 
       # - name: Publish package on NPM 📦
       #   run: npm publish dist
