--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": false,
   "version": "0.0.0",
   "type": "module",
+  "description": "Lib de componentes para utilização em projetos React",
   "scripts": {
     "prebuild": "rm -rf dist",
     "build": "tsup src/index.ts --format esm,cjs --dts",
