--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,9 +9,6 @@ jobs:
   publish-npm:
     runs-on: ubuntu-latest
     steps:
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-
       - name: Checkout
         uses: actions/checkout@v3
       
@@ -32,7 +29,7 @@ jobs:
         with:
           file: package.json
           field: version
-          value: $RELEASE_VERSION
+          value: ${{ steps.semantic_release_info.outputs.git_tag }}
 
       - name: Prepare files
         run: cp yarn.lock dist && cp package.json dist
